changed bg color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #a65bbb, #864bbb);
+  background: linear-gradient(to right, #d46477, #e5ee6b);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   font-size: 20px;
